--- a/benchmarks/polybench_seq/3mm/clean_code/Makefile.discopop
+++ b/benchmarks/polybench_seq/3mm/clean_code/Makefile.discopop
@@ -7,6 +7,10 @@ get_suggestions:
 	./3mm_base
 	cd .discopop && discopop_explorer && discopop_patch_generator
 
+get_cpu_suggestions:
+	./3mm_base
+	cd .discopop && discopop_explorer --enable-patterns=reduction,doall,pipeline,geodec && discopop_patch_generator
+
 exec:
 	./3mm_base
 
