--- a/benchmarks/polybench_seq/3mm/clean_code/Makefile.discopop
+++ b/benchmarks/polybench_seq/3mm/clean_code/Makefile.discopop
@@ -1,21 +1,21 @@
 all: clean exec
 
 get_suggestions:
-	$(CC) -I utilities -I linear-algebra/kernels/3mm utilities/polybench.c linear-algebra/kernels/3mm/3mm.c  -o 3mm_base -DSMALL_DATASET
+	discopop_cc -I utilities -I linear-algebra/kernels/3mm utilities/polybench.c linear-algebra/kernels/3mm/3mm.c  -o 3mm_base -DSMALL_DATASET
 	./3mm_base
 	cd .discopop && discopop_explorer && discopop_patch_generator
 
 get_cpu_suggestions:
-	$(CC) -I utilities -I linear-algebra/kernels/3mm utilities/polybench.c linear-algebra/kernels/3mm/3mm.c  -o 3mm_base -DSMALL_DATASET
+	discopop_cc -I utilities -I linear-algebra/kernels/3mm utilities/polybench.c linear-algebra/kernels/3mm/3mm.c  -o 3mm_base -DSMALL_DATASET
 	./3mm_base
 	cd .discopop && discopop_explorer --enable-patterns=reduction,doall,pipeline,geodec && discopop_patch_generator
 
 exec:
-	$(CC) -fopenmp -fopenmp-targets=nvptx64 -I utilities -I linear-algebra/kernels/3mm utilities/polybench.c linear-algebra/kernels/3mm/3mm.c  -o 3mm_base -DSTANDARD_DATASET
+	clang -fopenmp -fopenmp-targets=nvptx64 -I utilities -I linear-algebra/kernels/3mm utilities/polybench.c linear-algebra/kernels/3mm/3mm.c  -o 3mm_base -DSMALL_DATASET
 	./3mm_base
 
 exec_cpu:
-	$(CC) -fopenmp -I utilities -I linear-algebra/kernels/3mm utilities/polybench.c linear-algebra/kernels/3mm/3mm.c  -o 3mm_base -DSTANDARD_DATASET
+	clang -fopenmp -I utilities -I linear-algebra/kernels/3mm utilities/polybench.c linear-algebra/kernels/3mm/3mm.c  -o 3mm_base -DSMALL_DATASET
 	./3mm_base
 
 clean:
