--- a/benchmarks/polybench_seq/atax/Makefile
+++ b/benchmarks/polybench_seq/atax/Makefile
@@ -61,6 +61,7 @@ cleanup_cpu_exhaustive_optimum:
 prepare_cpu_exhaustive_optimum: cleanup_cpu_exhaustive_optimum get_discopop_patterns
 	make reset_env
 	cd dp_folder && pwd && discopop_optimizer -v -x ${DP_OPTIMIZER_FLAGS} --system-configuration ../../../../configuration/cpu_only_system_configuration.json
+	cd dp_folder && discopop_patch_generator -v -a optimizer/patterns.json
 	cd dp_folder && discopop_patch_generator -v -fcf optimizer/updated_configuration.json
 	cd dp_folder && discopop_patch_applicator -v -fcf optimizer/updated_configuration.json
 	mv code code_cpu_exhaustive_optimum
@@ -76,6 +77,7 @@ cleanup_cpu_evolutionary_optimum:
 prepare_cpu_evolutionary_optimum: cleanup_cpu_evolutionary_optimum get_discopop_patterns
 	make reset_env
 	cd dp_folder && pwd && discopop_optimizer -v ${DP_OPTIMIZER_FLAGS} --system-configuration ../../../../configuration/cpu_only_system_configuration.json
+	cd dp_folder && discopop_patch_generator -v -a optimizer/patterns.json
 	cd dp_folder && discopop_patch_generator -v -fcf optimizer/updated_configuration.json
 	cd dp_folder && discopop_patch_applicator -v -fcf optimizer/updated_configuration.json
 	mv code code_cpu_evolutionary_optimum
