--- a/benchmarks/polybench_seq/atax/Makefile.old
+++ b/benchmarks/polybench_seq/atax/Makefile.old
@@ -7,30 +7,34 @@ GPU_CXX_FLAGS="-fopenmp -fopenmp-targets=nvptx64"
 DP_OPTIMIZER_FLAGS=--doall-microbench-file ../../../../configuration/doall_1.json --reduction-microbench-file ../../../../configuration/reduction.json
 
 ########## CPU + GPU
-all: clean setup_env cpu_prepare_code gpu_prepare_code cpu_compile gpu_compile cpu_measure gpu_measure
+#all: clean setup_env cpu_prepare_code gpu_prepare_code cpu_compile gpu_compile cpu_measure gpu_measure
+all: cpu
 
 ########## CPU
 cpu: clean setup_env cpu_prepare_code cpu_compile cpu_measure
 
 cpu_prepare_code: 
 	make prepare_sequential
-	make cpu_get_discopop_patterns
-	make prepare_single_suggestions
+	make prepare_cpu_exhaustive_optimum
+	make prepare_cpu_evolutionary_optimum
 
 cpu_compile:
 	make compile_sequential
-	make compile_single_suggestions
+	make compile_cpu_exhaustive_optimum
+	make compile_cpu_evolutionary_optimum
 
 cpu_measure:
 	make measure_sequential
-	make measure_single_suggestions
+	make measure_cpu_exhaustive_optimum
+	make measure_cpu_evolutionary_optimum
 
 cpu_cleanup:
-	rm -rvf code_*
-
+	make cleanup_sequential
+	make cleanup_cpu_exhaustive_optimum
+	make cleanup_cpu_evolutionary_optimum
 
 ##### DISCOPOP 
-cpu_get_discopop_patterns:
+get_discopop_patterns:
 	make reset_env
 	cd code && make -f Makefile.discopop instrument_atax
 	cd code && ./atax_base
@@ -38,11 +42,11 @@ cpu_get_discopop_patterns:
 	cp -r code/.discopop/* clean_dp_folder
 	ls -a clean_dp_folder
 	cd clean_dp_folder && discopop_explorer --enable-patterns=reduction,doall
-	cd clean_dp_folder && discopop_optimizer -v -x ${DP_OPTIMIZER_FLAGS} --system-configuration ../../../../configuration/cpu_only_system_configuration.json
-	cd clean_dp_folder && discopop_patch_generator -a optimizer/patterns.json
 
 ##### SEQUENTIAL
-prepare_sequential:
+cleanup_sequential:
+	rm -rvf code_sequential
+prepare_sequential: cleanup_sequential
 	make reset_env
 	mv code code_sequential
 	mkdir -p logs/sequential
@@ -51,50 +55,39 @@ compile_sequential:
 measure_sequential:
 	-/usr/bin/time --format="sequential;%e;%x;" --append --output=measurements.csv code_sequential/atax_base 1>> logs/sequential/stdout.txt 2>> logs/sequential/stderr.txt
 
-
-
-##### SINGLE SUGGESTIONS
-SUGGESTIONS_DIR=./clean_dp_folder/patch_generator
-prepare_single_suggestions: $(SUGGESTIONS_DIR)/*
-	for f in $^; do \
-		basename $${f}; \
-		rm -rvf code_$$(basename $${f}); \
-		make reset_env; \
-		ls; \
-		pwd; \
-		cd dp_folder && discopop_patch_applicator -v -a $$(basename $${f}); \
-		cd .. ;\
-		mv code code_$$(basename $${f}); \
-		mkdir -p logs/$$(basename $${f}); \
-	done
-compile_single_suggestions: $(SUGGESTIONS_DIR)/*
-	for f in $^; do \
-		cd code_$$(basename $${f}) && CC=${CC} CFLAGS=${CPU_CC_FLAGS} make -f Makefile.discopop compile_atax ; \
-		cd .. ; \
-	done
-measure_single_suggestions: $(SUGGESTIONS_DIR)/*
-	for f in $^; do \
-		/usr/bin/time --format="$$(basename $${f});%e;%x;" --append --output=measurements.csv code_$$(basename $${f})/prog 1>> logs/$$(basename $${f})/stdout.txt 2>> logs/$$(basename $${f})/stderr.txt ; \
-	done
-
-
-	
-
-
 ##### CPU EXHAUSTIVE
 cleanup_cpu_exhaustive_optimum:
 	rm -rvf code_cpu_exhaustive_optimum
 prepare_cpu_exhaustive_optimum: cleanup_cpu_exhaustive_optimum get_discopop_patterns
 	make reset_env
 	cd dp_folder && pwd && discopop_optimizer -v -x ${DP_OPTIMIZER_FLAGS} --system-configuration ../../../../configuration/cpu_only_system_configuration.json
+	cd dp_folder && discopop_patch_generator -v -a optimizer/patterns.json
 	cd dp_folder && discopop_patch_generator -v -fcf optimizer/updated_configuration.json
 	cd dp_folder && discopop_patch_applicator -v -fcf optimizer/updated_configuration.json
 	mv code code_cpu_exhaustive_optimum
 	mkdir -p logs/cpu_exhaustive
 compile_cpu_exhaustive_optimum:
-	-cd code_cpu_exhaustive_optimum && cmake -DCMAKE_C_COMPILER=${CC} -DCMAKE_CXX_COMPILER=${CXX} -DCMAKE_C_FLAGS=${CPU_CC_FLAGS} -DCMAKE_CXX_FLAGS=${CPU_CXX_FLAGS} . && make
+	-cd code_cpu_exhaustive_optimum && CC=${CC} CFLAGS=${CPU_CC_FLAGS} make -f Makefile.discopop compile_atax
 measure_cpu_exhaustive_optimum:
-	-/usr/bin/time --format="cpu_exhaustive;%e;%x;" --append --output=measurements.csv code_cpu_exhaustive_optimum/prog 1>> logs/cpu_exhaustive/stdout.txt 2>> logs/cpu_exhaustive/stderr.txt
+	-/usr/bin/time --format="cpu_exhaustive;%e;%x;" --append --output=measurements.csv code_cpu_exhaustive_optimum/atax_base 1>> logs/cpu_exhaustive/stdout.txt 2>> logs/cpu_exhaustive/stderr.txt
+
+##### CPU EVOLUTIONARY
+cleanup_cpu_evolutionary_optimum:
+	rm -rvf code_cpu_evolutionary_optimum 
+prepare_cpu_evolutionary_optimum: cleanup_cpu_evolutionary_optimum get_discopop_patterns
+	make reset_env
+	cd dp_folder && pwd && discopop_optimizer -v ${DP_OPTIMIZER_FLAGS} --system-configuration ../../../../configuration/cpu_only_system_configuration.json
+	cd dp_folder && discopop_patch_generator -v -a optimizer/patterns.json
+	cd dp_folder && discopop_patch_generator -v -fcf optimizer/updated_configuration.json
+	cd dp_folder && discopop_patch_applicator -v -fcf optimizer/updated_configuration.json
+	mv code code_cpu_evolutionary_optimum
+	mkdir -p logs/cpu_evolutionary
+compile_cpu_evolutionary_optimum:
+	-cd code_cpu_evolutionary_optimum && CC=${CC} CFLAGS=${CPU_CC_FLAGS} make -f Makefile.discopop compile_atax
+measure_cpu_evolutionary_optimum:
+	-/usr/bin/time --format="cpu_evolutionary;%e;%x;" --append --output=measurements.csv code_cpu_evolutionary_optimum/atax_base 1>> logs/cpu_evolutionary/stdout.txt 2>> logs/cpu_evolutionary/stderr.txt
+
+#####
 
 setup_env:
 	echo "ID; time; return_code;" > measurements.csv
@@ -117,3 +110,5 @@ clean:
 	make cpu_cleanup
 
 
+
+# gcc -I utilities -I linear-algebra/kernels/atax utilities/polybench.c linear-algebra/kernels/atax/atax.c -o atax_base
