--- a/benchmarks/polybench_seq/3mm_gpu/Makefile
+++ b/benchmarks/polybench_seq/3mm_gpu/Makefile
@@ -5,7 +5,7 @@ CPU_CXX_FLAGS="-fopenmp"
 GPU_CC_FLAGS="-fopenmp -fopenmp-targets=nvptx64"
 GPU_CXX_FLAGS="-fopenmp -fopenmp-targets=nvptx64"
 DP_OPTIMIZER_FLAGS=--doall-microbench-file ../../../../configuration/doall_1.json --reduction-microbench-file ../../../../configuration/reduction.json
-DP_PATCH_GENERATOR_FLAGS=--log INFO --only-maximum-id-pattern
+DP_PATCH_GENERATOR_FLAGS=--log INFO -only-optimizer-output-patterns #--only-maximum-id-pattern
 
 ########## CPU + GPU
 all: clean setup_env cpu_prepare_code cpu_compile cpu_measure
@@ -69,7 +69,7 @@ gpu_get_discopop_patterns:
 	cp -r code/.discopop/* clean_dp_folder
 	ls -a clean_dp_folder
 	cd clean_dp_folder && discopop_explorer --enable-patterns=reduction,doall
-	cd clean_dp_folder && discopop_optimizer -v -o1 ${DP_OPTIMIZER_FLAGS} --system-configuration ../../../../configuration/prefer_gpu_configuration.json
+	cd clean_dp_folder && discopop_optimizer -v ${DP_OPTIMIZER_FLAGS} --system-configuration ../../../../configuration/prefer_gpu_configuration.json
 	cd clean_dp_folder && discopop_patch_generator -a optimizer/patterns.json ${DP_PATCH_GENERATOR_FLAGS}
 
 ##### SEQUENTIAL
