--- a/clean_code/polybench_seq/Makefile.discopop
+++ b/clean_code/polybench_seq/Makefile.discopop
@@ -126,7 +126,7 @@ instrument_correlation:
 	discopop_cc -I utilities -I datamining/correlation utilities/polybench.c datamining/correlation/correlation.c -o correlation_base -DMINI_DATASET -lm
 
 compile_covariance:
-	${CC} ${CFLAGS} -I utilities -I datamining/covariance utilities/polybench.c datamining/covariance/covariance.c -o covariance -lm
+	${CC} ${CFLAGS} -I utilities -I datamining/covariance utilities/polybench.c datamining/covariance/covariance.c -o covariance_base -lm
 
 instrument_covariance:
-	discopop_cc -I utilities -I datamining/covariance utilities/polybench.c datamining/covariance/covariance.c -o covariance -DMINI_DATASET -lm
+	discopop_cc -I utilities -I datamining/covariance utilities/polybench.c datamining/covariance/covariance.c -o covariance_base -DMINI_DATASET -lm
